--- a/excursion/index.html
+++ b/excursion/index.html
@@ -1,9 +1,35 @@
-<h1 id="discover-hidden-places-in-the-world-around-you">Discover hidden places in the world around you</h1>
-<p><a href="https://markdowntohtml.com">Download Excursion made by Yaroslav (coming soon)</a> </p>
-<p><img src="https://github.com/yaroslavstoianov/welcome-service/blob/website/excursion/resources/videos/excursion.mp4" alt="video"></p>
-<h2 id="your-travel-guide">Your travel guide</h2>
-<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
-<p><img src="https://github.com/yaroslavstoianov/welcome-service/blob/website/excursion/resources/images/camp.jpg?raw=true" alt="camp"></p>
-<p><img src="https://github.com/yaroslavstoianov/welcome-service/blob/website/excursion/resources/images/phone.png?raw=true" alt="phone"></p>
-<h2 id="coming-soon-for-iphone-and-android">Coming Soon for iPhone and Android</h2>
-<p><a href="https://markdowntohtml.com">Download Excursion made by Yaroslav (coming soon)</a> </p>
+<!doctype html>
+<html>
+  <head>
+    <link rel="stylesheet" href="resources/css/style.css">
+  </head>
+  <body>
+
+    <!-- Landing section -->
+
+    <h1>Discover hidden places in the world around you</h1>
+    <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+    <video autoplay muted loop>
+      <source src="resources/videos/excursion.mp4" type="video/mp4">
+    </video>
+
+    <!-- Information Section -->
+
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p><img src="resources/images/camp.jpg"></p>
+
+    <!-- Coming Soon Section -->
+
+    <p><img class="app" src="resources/images/phone.png"></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+    <p><a class="cta" href="#">Download Excursion (Coming soon!)</a></p>
+
+    <!-- Footer -->
+    
+    <div class="footer">
+      <p>&copy; Excursion</p>
+    </div>
+
+  </body>
+</html>
